@@ -129,6 +129,7 @@ public:
     bool        user_prompt;	  // Flag as given to send_gdb_command()
     bool        user_check;	  // Flag as given to send_gdb_command()
     bool        recorded;	  // True if command was recorded
+    bool        undo_source;	  // True if command starts new undo source
 
     bool        disabling_occurred; // Flag: GDB disabled displays
 
@@ -180,6 +181,7 @@ public:
 	  user_prompt(true),
 	  user_check(true),
 	  recorded(false),
+	  undo_source(true),
 
 	  disabling_occurred(false),
 
@@ -228,6 +230,7 @@ private:
 	  user_prompt(true),
 	  user_check(true),
 	  recorded(false),
+	  undo_source(true),
 
 	  disabling_occurred(false),
 
@@ -861,7 +864,8 @@ static bool command_was_cancelled = false;
 // CHECK is set, add extra GDB commands to get GDB state.
 void send_gdb_command(string cmd, Widget origin,
 		      OQCProc callback, OACProc extra_callback, void *data,
-		      bool echo, bool verbose, bool prompt, bool check)
+		      bool echo, bool verbose, bool prompt, bool check,
+		      bool undo_source)
 {
     string echoed_cmd = cmd;
 
@@ -872,6 +876,7 @@ void send_gdb_command(string cmd, Widget origin,
     cmd_data->pos_buffer    = new PosBuffer;
     cmd_data->user_callback = callback;
     cmd_data->recorded      = gdb->recording();
+    cmd_data->undo_source   = undo_source;
 
     cmd_data->user_data    = data;
     cmd_data->user_verbose = verbose;
@@ -1922,9 +1927,10 @@ static void command_completed(void *data)
 
     CmdData *cmd_data = (CmdData *) data;
     PosBuffer *pos_buffer = cmd_data->pos_buffer;
-    bool check     = cmd_data->user_check;
-    bool verbose   = cmd_data->user_verbose;
-    bool do_prompt = cmd_data->user_prompt;
+    bool check       = cmd_data->user_check;
+    bool verbose     = cmd_data->user_verbose;
+    bool do_prompt   = cmd_data->user_prompt;
+    bool undo_source = cmd_data->undo_source;
 
     if (cmd_data->position_timer != 0)
 	XtRemoveTimeOut(cmd_data->position_timer);
@@ -1934,7 +1940,7 @@ static void command_completed(void *data)
 	XtRemoveTimeOut(cmd_data->display_timer);
     cmd_data->display_timer = 0;
 
-    if (verbose && !cmd_data->recorded)
+    if (verbose && !cmd_data->recorded && undo_source)
     {
 	// Begin a new undo command
 
